k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-handler-svc
spec:
  type: ClusterIP # Internal service type
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: webhook-handler
